[tool.poetry]
name = "lincolnshire-crime-analysis"
version = "0.1.0"
description = ""
authors = ["emmanuella <emmavduru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
geojson = "^3.1.0"
streamlit = "^1.38.0"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
